@@ -1074,41 +1074,90 @@ m6502_genRightShift (iCode * ic)
       countreg = m6502_reg_y;
     }
 
-  bool lsb_in_a = ( IS_AOP_XA (AOP (result)) || IS_AOP_XA (AOP (left)) || size==1);
-  bool msb_in_x = lsb_in_a && AOP_TYPE(result)!=AOP_DIR;
+  bool op_is_xa = ( IS_AOP_XA (AOP (result)) || IS_AOP_XA (AOP (left)));
+  bool msb_in_x = op_is_xa && AOP_TYPE(result)!=AOP_DIR;
+  bool early_load_count = (AOP_TYPE(left)==AOP_SOF || AOP_TYPE(right)==AOP_SOF || IS_AOP_WITH_A(AOP(right)));         
+  int a_loc = ( op_is_xa )? 0 : size-1;
 
-  if(lsb_in_a)
+  emitComment (TRACEGEN, "  %s - enter", __func__);
+
+  if(size==1)
     {
-      if(size==2)
+      emitComment (TRACEGEN, "  %s - size==1", __func__);
+      if(IS_AOP_Y(AOP(left)) && IS_AOP_A(AOP(right)) && countreg==m6502_reg_x)
+        early_load_count = true;
+      else if(IS_AOP_Y(AOP(left)))
+	early_load_count = false;
+        
+    }
+
+  if(early_load_count)
+    {
+      emitComment (TRACEGEN, "  %s - early count", __func__);
+      loadRegFromAop (countreg, AOP (right), 0);
+    }
+
+  if(size==1)
+    {
+      // do nothing
+      loadRegFromAop (m6502_reg_a, AOP (left), a_loc);
+    }
+  else if(op_is_xa)
+    {
+      emitComment (TRACEGEN, "  %s - op is XA", __func__);
+      if(AOP_TYPE(left)==AOP_SOF)
+        {
+	  emitComment (TRACEGEN, "  %s - op is XA SOF", __func__);
+	  loadRegFromAop (m6502_reg_a, AOP (left), 1);
+	  storeRegTempAlways(m6502_reg_a, true);
+	  dirtyRegTemp (getLastTempOfs());
+	  x_in_regtemp = true;
+	  loadRegFromAop (m6502_reg_a, AOP (left), 0);
+	  loadRegTempAt(m6502_reg_x,getLastTempOfs());
+        }
+      else if(IS_AOP_XA(AOP(result)))
+        {
+          emitComment (TRACEGEN, "  %s - result is XA", __func__);
+          loadRegFromAop (m6502_reg_xa, AOP (left), 0);
+	  storeRegTempAlways(m6502_reg_x, true);
+	  dirtyRegTemp (getLastTempOfs());
+	  x_in_regtemp = true;
+        }
+      else
 	{
-	  loadRegFromAop (m6502_reg_x, AOP (left), 1);
+	  emitComment (TRACEGEN, "  %s - other", __func__);
+
 	  if(msb_in_x)
 	    {
+	      loadRegFromAop (m6502_reg_x, AOP (left), 1);
 	      storeRegTempAlways(m6502_reg_x, true);
 	      dirtyRegTemp (getLastTempOfs());
 	      x_in_regtemp = true;
 	    }
 	  else
-	    storeRegToAop (m6502_reg_x, AOP(result) , 1);
+            {
+	      transferAopAop (AOP (left), 1, AOP (result), 1);
+            }
 	}
+      // FIXME: optimize if X is literal (sign is known)
+      if(m6502_reg_x->isLitConst && m6502_reg_x->litConst<0x80)
+        sign=false;
     }
   else if (!sameRegs (AOP (left), AOP (result)))
     {
       for (offset=0; offset<size-1; offset++)
 	transferAopAop (AOP (left), offset, AOP (result), offset);
-    }
 
-  int a_loc = ( lsb_in_a )? 0 : size-1;
-
-  emitComment (TRACEGEN|VVDBG, "%s: load countreg", __func__);
-  if(IS_AOP_WITH_A (AOP (right)))
-    {
-      loadRegFromAop (countreg, AOP (right), 0);
       loadRegFromAop (m6502_reg_a, AOP (left), a_loc);
+
     }
   else
-    {
       loadRegFromAop (m6502_reg_a, AOP (left), a_loc);
+
+
+  if(!early_load_count)
+    {
+      emitComment (TRACEGEN, "%s: late countreg", __func__);
       loadRegFromAop (countreg, AOP (right), 0);
     }
 
@@ -1125,7 +1174,8 @@ m6502_genRightShift (iCode * ic)
 
   safeEmitLabel (tlbl); // loop label
 
-  if(lsb_in_a && size==2)
+// fixme size 1 should be with XA
+  if(op_is_xa)
     {
       if(sign)
 	{
@@ -1166,17 +1216,20 @@ m6502_genRightShift (iCode * ic)
 
   safeEmitLabel (tlbl1); // end label
 
-  if(lsb_in_a)
-    {
-      storeRegToAop (m6502_reg_a, AOP(result) , 0);
-      if(size==2)
+  storeRegToAop (m6502_reg_a, AOP(result) , a_loc);
+
+//  if(op_is_xa || size==1)
+//    {
+//      storeRegToAop (m6502_reg_a, AOP(result) , 0);
+//      if(size==2)
+    if(op_is_xa)
         {
 	  if(msb_in_x)
 	    storeRegToAop (m6502_reg_x, AOP(result) , 1);
         }
-    }
-  else
-    storeRegToAop (m6502_reg_a, AOP(result) , size-1);
+//    }
+//  else
+//    storeRegToAop (m6502_reg_a, AOP(result) , size-1);
 
   // After loop, countreg is always 0
   m6502_dirtyReg(countreg);
