@@ -2,6 +2,12 @@
 
 	* src/mos6502/tempops.c:
 	  Add more debugging information to temp reg operations.
+	* src/mos6502/gen.c,
+	  src/mos6502/genand.c,
+	  src/mos6502/genlshift.c,
+	  src/mos6502/genrshift.c,
+	  src/mos6502/genplus.c:
+	  Fix several stack-auto regressions.
 	
 2025-11-29 Philipp Klaus Krause <philipp@colecovision.eu>
 
